--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
     <title>Les petits plats</title>
   </head>
-  <body id="app" class="mx-auto font-[Anton]">
+  <body id="app" class="mx-auto font-[Anton] bg-white text-white dark:bg-[#242424] dark:text-white">
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
